--- a/locales/Korean.json
+++ b/locales/Korean.json
@@ -12,180 +12,180 @@
 			}
 		},
 		"ping": {
-			"description": "Shows the bot's ping.",
-			"content": "Pinging...",
-			"bot_latency": "Bot Latency",
-			"api_latency": "API Latency",
-			"requested_by": "Requested by {author}"
+			"description": "봇의 핑을 알려줘요",
+			"content": "핑...",
+			"bot_latency": "봇 지연시간",
+			"api_latency": "API 지연시간",
+			"requested_by": "요청자: {author}"
 		},
 		"lavalink": {
-			"description": "Shows the current Lavalink stats.",
-			"title": "Lavalink Stats",
-			"content": "Player: {players}\nPlaying Players: {playingPlayers}\nUptime: {uptime}\nCores: {cores} Core(s)\nMemory Usage: {used} / {reservable}\nSystem Load: {systemLoad}%\nLavalink Load: {lavalinkLoad}%"
+			"description": "Lavalink 노드의 통계를 보여줘요",
+			"title": "Lavalink 통계",
+			"content": "플레이어: {players}\n활성 플레이어: {playingPlayers}\n가동시간: {uptime}\n코어: {cores} 코어\n메모리 사용량: {used} / {reservable}\n시스템 부하: {systemLoad}%\nLavalink 부하: {lavalinkLoad}%"
 		},
 		"invite": {
-			"description": "Get the bot invite link.",
-			"content": "You can invite me by clicking the button below. Any bugs or outages? Join the support server!"
+			"description": "봇의 초대 링크를 표시해요",
+			"content": "아래 버튼을 눌러 봇을 초대할 수 있어요. 버그가 있나요? 지원 서버에 참여하세요!"
 		},
 		"help": {
-			"description": "Shows the help menu.",
+			"description": "도움말 메뉴를 출력해요",
 			"options": {
-				"command": "The command you want to get info on"
+				"command": "특정 명령어의 정보를 얻고 싶다면 여기에 명령어를 입력해주세요"
 			},
-			"content": "Hey there! I'm {bot}, a music bot made with [Lavamusic](https://github.com/appujet/lavamusic) and Discord. You can use `{prefix}help <command>` to get more info on a command.",
-			"title": "Help Menu",
-			"not_found": "This `{cmdName}` command does not exist.",
-			"help_cmd": "**Description:** {description}\n**Usage:** {usage}\n**Examples:** {examples}\n**Aliases:** {aliases}\n**Category:** {category}\n**Cooldown:** {cooldown} seconds\n**Permissions:** {premUser}\n**Bot Permissions:** {premBot}\n**Developer Only:** {dev}\n**Slash Command:** {slash}\n**Args:** {args}\n**Player:** {player}\n**DJ:** {dj}\n**DJ Permissions:** {djPerm}\n**Voice:** {voice}",
-			"footer": "Use {prefix}help <command> for more info on a command"
+			"content": "안녕하세요! 저는 [Lavamusic](https://github.com/appujet/lavamusic)과 Discord로 만들어진 음악 봇이에요. `{prefix}help <명령어>`를 사용하여 그 명령어의 자세한 정보를 얻을 수 있어요.",
+			"title": "도움말 메뉴",
+			"not_found": "`{cmdName}` 명령어는 없네요.",
+			"help_cmd": "**설명:** {description}\n**사용 방법:** {usage}\n**예시:** {examples}\n**줄인 명령어:** {aliases}\n**카테고리:** {category}\n**쿨다운:** {cooldown}초\n**필요한 권한:** {premUser}\n**봇에게 필요한 권한:** {premBot}\n**개발자 전용:** {dev}\n**빗금 명령어(/) 사용 가능:** {slash}\n**인수:** {args}\n**노래 재생 중에만 사용 가능:** {player}\n**DJ만 사용 가능:** {dj}\n**DJ에게 필요한 권한:** {djPerm}\n**음성 채널 접속 중에만 사용 가능:** {voice}",
+			"footer": "{prefix}help <command> 명령어를 사용하여 명령어에 대한 자세한 정보를 얻을 수 있어요"
 		},
 		"botinfo": {
-			"description": "Information about the bot",
-			"content": "Bot Information:\n- **Operating System**: {osInfo}\n- **Uptime**: {osUptime}\n- **Hostname**: {osHostname}\n- **CPU Architecture**: {cpuInfo}\n- **CPU Usage**: {cpuUsed}%\n- **Memory Usage**: {memUsed}MB / {memTotal}GB\n- **Node Version**: {nodeVersion}\n- **Discord Version**: {discordJsVersion}\n- **Connected to** {guilds} guilds, {channels} channels, and {users} users\n- **Total Commands**: {commands}"
+			"description": "봇에 대한 정보를 표시해요",
+			"content": "봇 정보:\n- **운영체제**: {osInfo}\n- **가동시간**: {osUptime}\n- **호스트 이름**: {osHostname}\n- **CPU 및 아키텍처**: {cpuInfo}\n- **CPU 사용량**: {cpuUsed}%\n- **메모리 사용량**: {memUsed}MB / {memTotal}GB\n- **Node 버전**: {nodeVersion}\n- **Discord 버전**: {discordJsVersion}\n- {guilds} 서버, {channels} 채널, {users} 유저 캐시됨\n- **명령어 수**: {commands}개"
 		},
 		"about": {
-			"description": "Shows information about the bot",
+			"description": "봇에 대해 알려줘요",
 			"fields": {
-				"creator": "Creator",
-				"repository": "Repository",
-				"support": "Support",
-				"description": "He really wanted to make his first open source project ever for more coding experience. In this project, he was challenged to make a project with fewer bugs. Hope you enjoy using LavaMusic!"
+				"creator": "제작자",
+				"repository": "GitHub 저장소",
+				"support": "지원",
+				"description": "그는 더 많은 코딩 경험을 위해 자신의 첫 번째 오픈 소스 프로젝트를 만들고 싶어했어요. 이 프로젝트에서 그는 버그가 적은 프로젝트를 만들려고 노력했어요. 여러분이 LavaMusic를 즐겁게 즐기고 계시길 바라요!"
 			}
 		},
 		"dj": {
-			"description": "Manage the DJ mode and associated roles",
+			"description": "DJ 모드 및 역할을 관리해요",
 			"errors": {
-				"provide_role": "Please provide a role.",
-				"no_roles": "The DJ role is empty.",
-				"invalid_subcommand": "Please provide a valid subcommand."
+				"provide_role": "역할을 지정해주세요.",
+				"no_roles": "DJ 역할이 텅 비었네요.",
+				"invalid_subcommand": "하위 명령어를 정확하게 입력해주세요"
 			},
 			"messages": {
-				"role_exists": "The DJ role <@&{roleId}> is already added.",
-				"role_added": "The DJ role <@&{roleId}> has been added.",
-				"role_not_found": "The DJ role <@&{roleId}> is not added.",
-				"role_removed": "The DJ role <@&{roleId}> has been removed.",
-				"all_roles_cleared": "All DJ roles have been removed.",
-				"toggle": "The DJ mode has been toggled to {status}."
+				"role_exists": "<@&{roleId}>은 이미 DJ 역할에 등록되어 있네요.",
+				"role_added": "<@&{roleId}> 역할이 DJ로 등록되었어요.",
+				"role_not_found": "<@&{roleId}> 역할을 DJ로 등록하지 못했어요. 역할이 없는 것 같네요.",
+				"role_removed": "<@&{roleId}> 역할이 DJ에서 삭제되었어요.",
+				"all_roles_cleared": "DJ 역할이 초기화되었어요.",
+				"toggle": "DJ 모드가 {status}로 변경되었어요."
 			},
 			"options": {
-				"add": "The DJ role you want to add",
-				"remove": "The DJ role you want to remove",
-				"clear": "Clears all DJ roles",
-				"toggle": "Toggles the DJ role",
-				"role": "The DJ role"
+				"add": "DJ 역할을 추가해요",
+				"remove": "DJ에서 역할을 삭제해요",
+				"clear": "DJ 역할을 초기화해요",
+				"toggle": "DJ 모드를 토글해요",
+				"role": "역할 지정"
 			},
-			"subcommands": "Subcommands"
+			"subcommands": "하위 명령어"
 		},
 		"language": {
-			"description": "Set the language for the bot",
-			"invalid_language": "Please provide a valid language. Example: `EnglishUS` for English (United States)\n\nYou can find the list of supported languages [here](https://discord.com/developers/docs/reference#locales)\n\n**Available Languages:**\n{languages}",
-			"already_set": "The language is already set to `{language}`",
-			"not_set": "The language is not set.",
-			"set": "`✅` | The language has been set to `{language}`",
-			"reset": "`✅` | The language has been reset to the default language.",
+			"description": "언어를 설정해요",
+			"invalid_language": "올바른 언어를 지정해주세요. 예: `EnglishUS`는 영어 (미국)\n\n[여기](https://discord.com/developers/docs/reference#locales)에서 지원되는 언어 목록을 확인할 수 있어요.\n\n**현재 사용 가능한 언어:**\n{languages}",
+			"already_set": "`{language}`로 언어가 이미 설정되어 있어요.",
+			"not_set": "언어가 설정되지 않았어요.",
+			"set": "`✅` | 언어가 `{language}`로 변경되었어요.",
+			"reset": "`✅` | 언어가 기본 언어로 초기화되었어요.",
 			"options": {
-				"set": "Set the language for the bot",
-				"language": "The language you want to set",
-				"reset": "Change the language back to the default language"
+				"set": "봇의 언어를 설정해요",
+				"language": "설정할 언어",
+				"reset": "언어를 기본값으로 초기화해요"
 			}
 		},
 		"prefix": {
-			"description": "Shows or sets the bot's prefix",
+			"description": "봇의 접두사를 보거나 수정해요",
 			"errors": {
-				"prefix_too_long": "The prefix cannot be longer than 3 characters."
+				"prefix_too_long": "접두사는 3자를 넘을 수 없어요."
 			},
 			"messages": {
-				"current_prefix": "The prefix for this server is `{prefix}`",
-				"prefix_set": "The prefix for this server is now `{prefix}`",
-				"prefix_reset": "The prefix for this server is now `{prefix}`"
+				"current_prefix": "현재 설정된 접두사는 `{prefix}`예요.",
+				"prefix_set": "접두사가 `{prefix}`로 수정되었어요.",
+				"prefix_reset": "접두사가 `{prefix}`로 초기화되었어요."
 			},
 			"options": {
-				"set": "Sets the prefix",
-				"prefix": "The prefix you want to set",
-				"reset": "Resets the prefix to the default one"
+				"set": "접두사를 설정해요",
+				"prefix": "설정할 접두사",
+				"reset": "접두사를 기본값으로 초기화해요"
 			}
 		},
 		"setup": {
-			"description": "Sets up the bot",
+			"description": "음악 채널을 확인하거나 수정해요",
 			"errors": {
-				"channel_exists": "The song request channel already exists.",
-				"channel_not_exists": "The song request channel doesn't exist.",
-				"channel_delete_fail": "The song request channel has been deleted. If the channel is not deleted normally, please delete it yourself."
+				"channel_exists": "음악채널이 이미 설정되어 있어요.",
+				"channel_not_exists": "음악채널이 존재하지 않아요.",
+				"channel_delete_fail": "음악 채널이 삭제되었어요. 만약 삭제되지 않았다면 직접 삭제하세요."
 			},
 			"messages": {
-				"channel_created": "The song request channel has been created in <#{channelId}>.",
-				"channel_deleted": "The song request channel has been deleted.",
-				"channel_info": "The song request channel is <#{channelId}>."
+				"channel_created": "<#{channelId}>로 음악 채널이 만들어졌어요.",
+				"channel_deleted": "음악채널이 삭제되었어요.",
+				"channel_info": "<#{channelId}>가 현재 등록된 음악 채널이에요."
 			},
 			"options": {
-				"create": "Creates the song request channel",
-				"delete": "Deletes the song request channel",
-				"info": "Shows the song request channel"
+				"create": "음악채널을 만들어요",
+				"delete": "음악채널을 삭제해요",
+				"info": "현재 등록된 음악채널을 확인해요"
 			}
 		},
 		"8d": {
-			"description": "on/off 8d filter",
+			"description": "8d 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | 8D filter has been `ENABLED`.",
-				"filter_disabled": "`✅` | 8D filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 8D 필터가 `활성화되었어요`.",
+				"filter_disabled": "`✅` | 8D 필터가 `비활성화되었어요`."
 			}
 		},
 		"bassboost": {
-			"description": "on/off bassboost filter",
+			"description": "베이스부스트 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | Bassboost filter has been `ENABLED`. \n**Be careful, listening too loudly can damage your hearing!**",
-				"filter_disabled": "`✅` | Bassboost filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 베이스부스트 필터가 `활성화되었어요`. \n**조심하세요, 너무 크게 들으면 귀가 나갈 수도 있어요!**",
+				"filter_disabled": "`✅` | 베이스부스트 필터가 `비활성화되었어요`."
 			}
 		},
 		"distorsion": {
-			"description": "Toggle the distorsion filter on/off",
+			"description": "외곡 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | Distorsion filter has been `ENABLED`.",
-				"filter_disabled": "`✅` | Distorsion filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 외곡 필터가 `활성화되었어요`.",
+				"filter_disabled": "`✅` | 외곡 필터가 `비활성화되었어요`."
 			}
 		},
 		"karaoke": {
-			"description": "Toggle the karaoke filter on/off",
+			"description": "노래방 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | Karaoke filter has been `ENABLED`.",
-				"filter_disabled": "`✅` | Karaoke filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 노래방 필터가 `활성화되었어요`.",
+				"filter_disabled": "`✅` | 노래방 필터가 `비활성화되었어요`."
 			}
 		},
 		"lowpass": {
-			"description": "Toggle the lowpass filter on/off",
+			"description": "저역 통과 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | Lowpass filter has been `ENABLED`.",
-				"filter_disabled": "`✅` | Lowpass filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 저역 통과 필터가 `활성화되었어요`.",
+				"filter_disabled": "`✅` | 저역 통과 필터가 `비활성화되었어요`."
 			}
 		},
 		"nightcore": {
-			"description": "Toggle the nightcore filter on/off",
+			"description": "나이트코어 필터를 토글해요",
 			"messages": {
-				"filter_enabled": "`✅` | Nightcore filter has been `ENABLED`.",
-				"filter_disabled": "`✅` | Nightcore filter has been `DISABLED`."
+				"filter_enabled": "`✅` | 나이트코어 필터가 `활성화되었어요`.",
+				"filter_disabled": "`✅` | 나이트코어 필터가 `비활성화되었어요`."
 			}
 		},
 		"pitch": {
-			"description": "Toggle the pitch filter on/off",
+			"description": "노래의 음높이를 변경해요",
 			"options": {
-				"pitch": "The number you want to set the pitch to (between 0.5 and 5)"
+				"pitch": "설정할 음높이를 0.5에서 5 사이로 입력하세요"
 			},
 			"errors": {
-				"invalid_number": "Please provide a valid number between 0.5 and 5."
+				"invalid_number": "0.5에서 5 사이의 올바른 숫자를 입력해주세요."
 			},
 			"messages": {
-				"pitch_set": "`✅` | Pitch has been set to **{pitch}**."
+				"pitch_set": "`✅` | 음높이가 **{pitch}**로 변경되었어요."
 			}
 		},
 		"rate": {
-			"description": "Change the rate of the song",
+			"description": "노래의 비율을 설정해요",
 			"options": {
-				"rate": "The number you want to set the rate to (between 0.5 and 5)"
+				"rate": "설정할 비율을 0.5에서 5 사이로 입력하세요"
 			},
 			"errors": {
-				"invalid_number": "Please provide a valid number between 0.5 and 5."
+				"invalid_number": "0.5에서 5 사이의 올바른 숫자를 입력해주세요."
 			},
 			"messages": {
-				"rate_set": "`✅` | Rate has been set to **{rate}**."
+				"rate_set": "`✅` | 노래의 비율이 **{rate}**로 변경되었어요."
 			}
 		},
 		"reset": {
@@ -197,8 +197,8 @@
 		"rotation": {
 			"description": "Toggle the rotation filter on/off",
 			"messages": {
-				"enabled": "`✅` | Rotation filter has been `ENABLED`.",
-				"disabled": "`✅` | Rotation filter has been `DISABLED`."
+				"enabled": "`✅` | Rotation 필터가 `활성화되었어요`.",
+				"disabled": "`✅` | Rotation 필터가 `비활성화되었어요`."
 			}
 		},
 		"speed": {
@@ -214,15 +214,15 @@
 		"tremolo": {
 			"description": "Toggle the tremolo filter on/off",
 			"messages": {
-				"enabled": "`✅` | Tremolo filter has been `ENABLED`.",
-				"disabled": "`✅` | Tremolo filter has been `DISABLED`."
+				"enabled": "`✅` | Tremolo 필터가 `활성화되었어요`.",
+				"disabled": "`✅` | Tremolo 필터가 `비활성화되었어요`."
 			}
 		},
 		"vibrato": {
 			"description": "Toggle the vibrato filter on/off",
 			"messages": {
-				"enabled": "`✅` | Vibrato filter has been `ENABLED`.",
-				"disabled": "`✅` | Vibrato filter has been `DISABLED`."
+				"enabled": "`✅` | Vibrato 필터가 `활성화되었어요`.",
+				"disabled": "`✅` | Vibrato 필터가 `비활성화되었어요`."
 			}
 		},
 		"autoplay": {
